# market-feed

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: CMakeLists.txt  client.cpp  server.cpp
include/: README.md  codec.hpp  engine.hpp  order_book.hpp  wire.hpp
include/handlers/: client_message_handler.hpp  server_message_handler.hpp
include/network/: connection.hpp
include/trading/: trading_client.hpp  trading_server.hpp
src/core/: engine.cpp  order_book.cpp
src/handlers/: client_message_handler.cpp  server_message_handler.cpp
src/network/: connection.cpp
src/trading/: client.cpp  client_2.cpp  server.cpp  trading_client.cpp  trading_server.cpp
temp/: dummy_client.py
tests/: CMakeLists.txt  engine_cancel.cpp  engine_new.cpp  ob_add_resting.cpp  ob_best_quote.cpp  ob_cancel_order.cpp  ob_match_taker.cpp  roundtrip.cpp  wire_roundtrip.cpp
tests/integration/: server_client_roundtrip.py
